[feat] 필터링에 따른 데이터처리를 해야함

--- a/components/todo/todo.module.css
+++ b/components/todo/todo.module.css
@@ -36,6 +36,10 @@
 .todoList {
   height: 90%;
 }
+.todo-wrap {
+  display: flex;
+  justify-content: space-between;
+}
 
 .add-todo-wrap {
   width: 100%;
