[feat] filter select 추가, localstorage 추가. 클릭한 필터 다른색으로 표시

--- a/components/todo/todo.module.css
+++ b/components/todo/todo.module.css
@@ -24,6 +24,12 @@
 .option {
   color: #ca7026;
   font-weight: 900;
+  cursor: pointer;
+}
+.selected-option {
+  color: #ffffff;
+  font-weight: 900;
+  cursor: pointer;
 }
 
 .content {
